# week-chain-TM

./: .gitignore  AUDITORIA_11_BLOQUES_WEEKCHAIN.md  AUDITORIA_FINAL_POST_CORRECCIONES.md  AUDITORIA_FINAL_PRODUCCION_2025.md  AUDITORIA_MULTIDISCIPLINARIA_COMPLETA.md  AUDITORIA_PLATAFORMA_COMPLETA_2025.md  AUDITORIA_PROFESIONAL_WEEKCHAIN_2025.md  AUDITORIA_QA_PROFESIONAL_2025.md  AUDITORIA_TECNICA_COMPLETA.md  AUDITORIA_TECNICA_FINAL_2025.md  AUDIT_FINAL_2025.md  Anchor.toml  CORRECCIONES_IMPLEMENTADAS.md  DASHBOARD_AUDIT.md  DEMO_FLOW_GUIDE.md  EXPERIENCIA_ADMIN_AUDITORIA.md  EXPERIENCIA_BROKER_AUDITORIA.md  EXPERIENCIA_MANAGEMENT_AUDITORIA.md  EXPERIENCIA_USUARIO_AUDITORIA.md  FASE_2_COMPLETADA.md  GOOGLE_AUTH_SETUP.md  GOOGLE_OAUTH_FIX.md  GOOGLE_OAUTH_SETUP.md  GOOGLE_WALLET_SETUP.md  GUIA_PRIMERA_PROPIEDAD.md  INSTRUCCIONES_AGREGAR_STEFANO.md  LEGAL_COMPLIANCE.md  PLAN_IMPLEMENTACION_COMPLETO.csv  PLAN_IMPLEMENTACION_RESUMEN.md  PLATFORM_AUDIT_REPORT.md  PRODUCTION_CHECKLIST.md  PRODUCTION_ROADMAP.md  README.md  README_PRODUCTION.md  REPORTE_QA_PRODUCCION_2025.md  REPORTE_QA_PRODUCCION_ACTUALIZADO_2025.md  SETUP_GOOGLE_OAUTH.md  SISTEMA_DE_PAGOS.md  SISTEMA_I18N_IMPLEMENTACION.md  SISTEMA_WALLET_PAGOS_TERMINOS.md  (+9 more)
app/: HomePageClient.tsx  _root-layout-client.tsx  error.tsx  globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts  twitter-image.tsx
components/: admin-header.tsx  admin-sidebar.tsx  analytics-provider.tsx  beta-banner.tsx  beta-watermark.tsx  escrow-status.tsx  (+82 more)
programs/week-token/: Cargo.toml
programs/week-token/src/: lib.rs
(+662 files in other folders)
