[package]
name = "week-token"
version = "0.1.0"
description = "WEEK Token - SPL Token for WEEK-CHAIN ecosystem"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "week_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
